jest.mock(
  'electron',
  () => {
    return {
      remote: {
        app: {
          getPath: jest.fn().mockReturnValue('.')
        }
      }
    }
  },
  { virtual: true }
)

import Markdown from 'browser/lib/markdown'
import markdownFixtures from '../fixtures/markdowns'

// basic markdown instance which meant to be used in every test cases.
// To test markdown options, initialize a new instance in your test case
const md = new Markdown()

test('Markdown.render() should renders markdown correctly', () => {
  const rendered = md.render(markdownFixtures.basic)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should renders codeblock correctly', () => {
  const rendered = md.render(markdownFixtures.codeblock)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should renders KaTeX correctly', () => {
  const rendered = md.render(markdownFixtures.katex)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should renders checkboxes', () => {
  const rendered = md.render(markdownFixtures.checkboxes)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should text with quotes correctly', () => {
  const renderedSmartQuotes = md.render(markdownFixtures.smartQuotes)
  expect(renderedSmartQuotes).toMatchSnapshot()

  const newmd = new Markdown({ typographer: false })
  const renderedNonSmartQuotes = newmd.render(markdownFixtures.smartQuotes)
  expect(renderedNonSmartQuotes).toMatchSnapshot()
})

test('Markdown.render() should render line breaks correctly', () => {
  const renderedBreaks = md.render(markdownFixtures.breaks)
  expect(renderedBreaks).toMatchSnapshot()

  const newmd = new Markdown({ breaks: false })
  const renderedNonBreaks = newmd.render(markdownFixtures.breaks)
  expect(renderedNonBreaks).toMatchSnapshot()
})

test('Markdown.render() should renders abbrevations correctly', () => {
  const rendered = md.render(markdownFixtures.abbrevations)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should renders sub correctly', () => {
  const rendered = md.render(markdownFixtures.subTexts)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should renders sup correctly', () => {
  const rendered = md.render(markdownFixtures.supTexts)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should renders definition lists correctly', () => {
  const rendered = md.render(markdownFixtures.deflists)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should render shortcuts correctly', () => {
  const rendered = md.render(markdownFixtures.shortcuts)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should render footnote correctly', () => {
  const rendered = md.render(markdownFixtures.footnote)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should renders [TOC] placholder correctly', () => {
  const rendered = md.render(markdownFixtures.tocPlaceholder)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should render PlantUML MindMaps correctly', () => {
  const rendered = md.render(markdownFixtures.plantUmlMindMap)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should render PlantUML Gantt correctly', () => {
  const rendered = md.render(markdownFixtures.plantUmlGantt)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should render PlantUML WBS correctly', () => {
  const rendered = md.render(markdownFixtures.plantUmlWbs)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should render PlantUML Umls correctly', () => {
  const rendered = md.render(markdownFixtures.plantUmlUml)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should render PlantUML Ditaa correctly', () => {
  const rendered = md.render(markdownFixtures.plantUmlDitaa)
  expect(rendered).toMatchSnapshot()
})

test('Markdown.render() should render GitHub-style alert blockquotes', () => {
  const rendered = md.render(markdownFixtures.githubAlerts)
  expect(rendered).toMatchSnapshot()

  expect(rendered).toMatch(
    /<div class="markdown-alert markdown-alert-note"[^>]*>/
  )
  expect(rendered).toMatch(
    /<div class="markdown-alert markdown-alert-tip"[^>]*>/
  )
  expect(rendered).toMatch(
    /<div class="markdown-alert markdown-alert-important"[^>]*>/
  )
  expect(rendered).toMatch(
    /<div class="markdown-alert markdown-alert-warning"[^>]*>/
  )
  expect(rendered).toMatch(
    /<div class="markdown-alert markdown-alert-caution"[^>]*>/
  )
  expect(rendered).toMatch(/<p class="markdown-alert-title">Note<\/p>/)
  expect(rendered).toMatch(/<p class="markdown-alert-title">Tip<\/p>/)
  expect(rendered).toMatch(/<p class="markdown-alert-title">Important<\/p>/)
  expect(rendered).toMatch(/<p class="markdown-alert-title">Warning<\/p>/)
  expect(rendered).toMatch(/<p class="markdown-alert-title">Caution<\/p>/)

  expect(rendered).toMatch(/<strong>bold<\/strong>/)
  expect(rendered).toMatch(/<code[^>]*>code<\/code>/)

  expect(rendered).toMatch(
    /<blockquote[^>]*>[\s\S]*regular blockquote stays unchanged[\s\S]*<\/blockquote>/
  )
  expect(rendered).toMatch(
    /<blockquote[^>]*>[\s\S]*\[!UNKNOWN\][\s\S]*<\/blockquote>/
  )
})

test('Markdown.render() should keep <details> body inside the element', () => {
  const rendered = md.render(markdownFixtures.details)
  expect(rendered).toMatchSnapshot()

  const detailsOpenIdx = rendered.indexOf('<details>')
  const detailsCloseIdx = rendered.indexOf('</details>')
  const bodyIdx = rendered.indexOf('This body must remain inside')
  const secondBodyIdx = rendered.indexOf('A second paragraph')
  const trailingIdx = rendered.indexOf('Trailing paragraph outside')

  expect(detailsOpenIdx).toBeGreaterThanOrEqual(0)
  expect(detailsCloseIdx).toBeGreaterThan(detailsOpenIdx)
  expect(bodyIdx).toBeGreaterThan(detailsOpenIdx)
  expect(bodyIdx).toBeLessThan(detailsCloseIdx)
  expect(secondBodyIdx).toBeGreaterThan(detailsOpenIdx)
  expect(secondBodyIdx).toBeLessThan(detailsCloseIdx)
  expect(trailingIdx).toBeGreaterThan(detailsCloseIdx)

  expect(rendered.match(/<\/details>/g).length).toBe(1)
})
